@@ -35,6 +35,7 @@ tasks.named('test') {
     useJUnitPlatform()
     systemProperty 'java.awt.headless', 'true'
     jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
     finalizedBy tasks.named('jacocoTestReport')
 }
 
@@ -65,6 +66,7 @@ tasks.register('integrationTest', Test) {
     useJUnitPlatform()
     systemProperty 'java.awt.headless', 'false'
     jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
     shouldRunAfter tasks.named('test')
     jacoco {
         destinationFile = layout.buildDirectory.file('jacoco/integrationTest.exec').get().asFile
